<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/writing_practice"
        android:icon="@drawable/ic_pen"
        android:title="@string/writing_practice"
        app:iconTint="?attr/colorOnPrimary"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/change_folder"
        android:icon="@drawable/ic_folder"
        android:title="@string/change_folder"
        app:iconTint="?attr/colorOnPrimary"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/new_folder"
        android:title="@string/new_chapter_folder"
        app:showAsAction="never" />
    <item
        android:id="@+id/back_up"
        android:title="@string/back_up"
        app:showAsAction="never" />
    <item
        android:id="@+id/restore"
        android:title="@string/restore"
        app:showAsAction="never" />
    <item
        android:id="@+id/appearance"
        android:title="@string/appearance"
        app:showAsAction="never" />
</menu>
